--- a/CM_Java/src/main/resources/fr/esgi/cookmaster_java_2a3/event-view.fxml
+++ b/CM_Java/src/main/resources/fr/esgi/cookmaster_java_2a3/event-view.fxml
@@ -8,8 +8,14 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="720.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.esgi.cookmaster_java_2a3.main.EventController">
+<?import javafx.scene.control.ScrollPane?>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="720.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.esgi.cookmaster_java_2a3.controller.EventController">
    <children>
+      <ScrollPane hbarPolicy="NEVER" layoutX="200.0" prefHeight="720.0" prefWidth="1080.0" vbarPolicy="ALWAYS" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <content>
+            <AnchorPane maxHeight="1080.0" maxWidth="1920.0" minHeight="720.0" minWidth="1280.0" prefHeight="1080.0" prefWidth="1920.0" style="-fx-background-color: #fffcf2;" />
+         </content>
+      </ScrollPane>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #403d39;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #252422;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="0.0">
@@ -46,9 +52,5 @@
             </AnchorPane>
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="200.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #fffcf2;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <children>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="EVENTS" AnchorPane.leftAnchor="50.0" AnchorPane.topAnchor="50.0" />
-         </children></AnchorPane>
    </children>
 </AnchorPane>
