--- a/CM_Java/src/main/resources/fr/esgi/cookmaster_java_2a3/prestation-view.fxml
+++ b/CM_Java/src/main/resources/fr/esgi/cookmaster_java_2a3/prestation-view.fxml
@@ -6,9 +6,16 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="720.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.esgi.cookmaster_java_2a3.main.UserController">
+<?import javafx.scene.control.ScrollPane?>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="720.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.esgi.cookmaster_java_2a3.controller.PrestationController">
    <children>
+      <ScrollPane hbarPolicy="NEVER" layoutX="200.0" prefHeight="720.0" prefWidth="1080.0" vbarPolicy="ALWAYS" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <content>
+            <AnchorPane maxHeight="1080.0" maxWidth="1920.0" minHeight="720.0" minWidth="1280.0" prefHeight="1080.0" prefWidth="1920.0" style="-fx-background-color: #fffcf2;" />
+         </content>
+      </ScrollPane>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #403d39;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #252422;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="0.0">
@@ -34,7 +41,7 @@
                               <Font name="System Bold" size="20.0" />
                            </font>
                         </Button>
-                        <Button mnemonicParsing="false" onAction="#openEventView" prefHeight="50.0" prefWidth="200.0" styleClass="styled-button" text="PRESTATIONS">
+                        <Button mnemonicParsing="false" onAction="#openPrestationView" prefHeight="50.0" prefWidth="200.0" styleClass="styled-button" text="PRESTATIONS">
                            <font>
                               <Font name="System Bold" size="20.0" />
                            </font>
@@ -45,6 +52,5 @@
             </AnchorPane>
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="200.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #fffcf2;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
    </children>
 </AnchorPane>
