--- a/CM_Java/src/main/resources/fr/esgi/cookmaster_java_2a3/user-regularity-view.fxml
+++ b/CM_Java/src/main/resources/fr/esgi/cookmaster_java_2a3/user-regularity-view.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="1080.0" maxWidth="1920.0" minHeight="720.0" minWidth="1280.0" prefHeight="400.0" prefWidth="600.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.esgi.cookmaster_java_2a3.main.UserController">
+<AnchorPane maxHeight="1080.0" maxWidth="1920.0" minHeight="720.0" minWidth="1280.0" prefHeight="400.0" prefWidth="600.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.esgi.cookmaster_java_2a3.controller.UserRegularityController">
    <children>
       <AnchorPane prefHeight="50.0" prefWidth="200.0" style="-fx-background-color: #252422;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -34,12 +34,12 @@
          <children>
             <AnchorPane prefHeight="572.0" prefWidth="621.0" style="-fx-background-color: #fffcf2;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
-                  <Text fill="#252422" strokeType="OUTSIDE" strokeWidth="0.0" text="Répartition des clients par type" AnchorPane.leftAnchor="48.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="48.0">
+                  <Text fill="#252422" strokeType="OUTSIDE" strokeWidth="0.0" text="Régularité d'achat des clients" AnchorPane.leftAnchor="48.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="48.0">
                      <font>
                         <Font name="System Bold" size="18.0" />
                      </font>
                   </Text>
-                  <Text fill="#403d39" layoutX="48.0" layoutY="95.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ce diagramme camembert illustrera la proportion de chaque type de client dans l'ensemble de la clientèle, mettant en évidence le type de client." wrappingWidth="502.6650390625" AnchorPane.leftAnchor="48.0" AnchorPane.rightAnchor="529.3349609375" AnchorPane.topAnchor="80.0">
+                  <Text fill="#403d39" layoutX="48.0" layoutY="95.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ce graphique en ligne indiquera la dynamique d'achat des clients en sur une période de temps" wrappingWidth="502.6650390625" AnchorPane.leftAnchor="48.0" AnchorPane.rightAnchor="529.3349609375" AnchorPane.topAnchor="80.0">
                      <font>
                         <Font size="14.0" />
                      </font>
