--- a/CM_Java/src/main/resources/fr/esgi/cookmaster_java_2a3/user-regularity-view.fxml
+++ b/CM_Java/src/main/resources/fr/esgi/cookmaster_java_2a3/user-regularity-view.fxml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.chart.PieChart?>
+<?import javafx.scene.chart.BarChart?>
+<?import javafx.scene.chart.CategoryAxis?>
+<?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
@@ -18,7 +20,7 @@
                      <font>
                         <Font name="System Bold" size="18.0" />
                      </font></Button>
-                  <Button mnemonicParsing="false" onAction="#openPrestationView" prefHeight="92.0" prefWidth="175.0" styleClass="styled-button" text="PRESTATION">
+                  <Button mnemonicParsing="false" onAction="#openPrestationCAView" prefHeight="92.0" prefWidth="175.0" styleClass="styled-button" text="PRESTATION">
                      <font>
                         <Font name="System Bold" size="18.0" />
                      </font></Button>
@@ -44,7 +46,14 @@
                         <Font size="14.0" />
                      </font>
                   </Text>
-                  <PieChart layoutX="11.0" layoutY="139.0" prefHeight="483.0" prefWidth="984.0" title="Repartition Type Client" AnchorPane.bottomAnchor="48.0" AnchorPane.leftAnchor="48.0" AnchorPane.rightAnchor="48.0" AnchorPane.topAnchor="139.0" />
+                  <BarChart fx:id="userRegularityBarChart" layoutX="50.0" layoutY="149.0" prefHeight="481.0" prefWidth="988.0" title="Nombre d'achat par mois">
+                    <xAxis>
+                      <CategoryAxis side="BOTTOM" />
+                    </xAxis>
+                    <yAxis>
+                      <NumberAxis side="LEFT" />
+                    </yAxis>
+                  </BarChart>
                </children>
             </AnchorPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #403d39;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
