--- a/CM_Java/src/main/resources/fr/esgi/cookmaster_java_2a3/prestation-top-view.fxml
+++ b/CM_Java/src/main/resources/fr/esgi/cookmaster_java_2a3/prestation-top-view.fxml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.chart.PieChart?>
+<?import javafx.scene.chart.BarChart?>
+<?import javafx.scene.chart.CategoryAxis?>
+<?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
@@ -44,7 +46,14 @@
                         <Font size="14.0" />
                      </font>
                   </Text>
-                  <PieChart fx:id="prestationCAPieChart" layoutX="53.0" layoutY="154.0" prefHeight="468.0" prefWidth="991.0" title="Répartition des prestation par CA" />
+                  <BarChart fx:id="prestationTopBarChart" layoutX="48.0" layoutY="150.0" prefHeight="480.0" prefWidth="987.0" title="Prestation par popularité">
+                    <xAxis>
+                      <CategoryAxis side="BOTTOM" />
+                    </xAxis>
+                    <yAxis>
+                      <NumberAxis side="LEFT" />
+                    </yAxis>
+                  </BarChart>
                </children>
             </AnchorPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #403d39;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
